--- a/Idiomatic/src/styles/Home_user.css
+++ b/Idiomatic/src/styles/Home_user.css
@@ -2,6 +2,10 @@
      border-radius:20px;
      cursor:pointer;
     border:none;
+    display: flex;
+    margin-bottom: 5%;
+    margin-top: 10%;
+    margin-left: 10%;
 }
 
 .btn:hover{
