--- a/Idiomatic/src/styles/Home_user.css
+++ b/Idiomatic/src/styles/Home_user.css
@@ -286,7 +286,7 @@
         top:19%;
         
         border-Radius:50px;
-        width:90%;
+        width:86% !important;
         background: rgba(70, 70, 122, 0.05);
         height:80vh; 
         box-Shadow:5px 8px 2px GRAY;
@@ -300,7 +300,7 @@
     }
 
     .ConBotones{
-        padding-Left:3px;
+        padding:0 !important;
     }
 
     
