--- a/Idiomatic/src/styles/App.css
+++ b/Idiomatic/src/styles/App.css
@@ -1,153 +1,228 @@
 /* Login css */
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-  }
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, sans-serif;
+}
+
+.navbar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 20px;
+  background-color: #fff;
+}
+
+
+.logo {
+  width: 150px;
+}
+
+.nav-links {
+  list-style-type: none;
+  display: flex;
+  align-items: center;
+}
+
+.nav-links li {
+  margin-left: 20px;
+}
+
+.nav-links a {
+  text-decoration: none;
+  color: #333;
+  font-weight: bold;
+}
+
+.create-account-btn {
+  background-color: #FFC212;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.login-page {
+  display: flex;
+  flex-direction: column; 
+  align-items: center;
+  justify-content: center;
+  min-height: 100vh;
+  background-image: url("/src/images/fondo2s.png");
+  background-size: cover;
+  background-position: center;
+}
+
+.login-container {
+  margin-top: 30px; 
   
-  body {
-    font-family: Arial, sans-serif;
-  }
+  display: flex;
+  border-radius: 10px;
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
+  max-width: 1100px;
+}
+
+.welcome-section {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  color: #fff;
+  height: 100%; /* O el tamaño que quieras darle a la sección */
+  padding: 10px;
+  padding-left: 3rem; /* Ajusta este valor para mover más hacia la izquierda */
+}
+.welcome-img {
+  width: 100%;
+  margin-top: 20px;
+}
+
+.form-section {
+  flex: 1;
+  padding: 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.form-section h2 {
+  margin-bottom: 30px;
+  color: #1F192F;
+  font-size: 35px;
+  margin-left: 12rem;
+}
+
+.login-form {
+  width: 100%;
+  max-width: 400px;
+  margin-left: 12rem;
+}
+
+.login-form input {
+  width: 24rem;
+  padding: 10px;
+  border: 2px solid #ccc;
+  text-align: center;
+  border-radius: 30px;
+}
+
+.MuiOutlinedInput-root {
+  border: none; /* Quitar borde */
+  background-color: transparent; /* Fondo transparente */
+  box-shadow: none; /* Sin sombra */
+}
+
+.MuiOutlinedInput-notchedOutline {
+  display: none; /* Eliminar la outline del borde */
+}
+
+
+.forgot-password-link {
+  font-size: 0.875rem; /* Tamaño de fuente más pequeño */
+  color: #1F192F; /* Color negro */
+  /*text-decoration: none; /* Sin subrayado */
+  display: inline-block;
+  font-weight: 600;
+  margin-left: 1rem;
+}
+
+.login-btn {
+  width: 40%;
+  padding: 10px;
+  background-color: #FFC212;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 700;
+  margin: 20px auto 0 auto; 
+  display: block; 
+  margin-left: 8rem;
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out; /* Efecto de transición */
+
   
-  .navbar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px 20px;
-    background-color: #fff;
-  }
-  
-  .logo {
-    width: 150px;
-  }
-  
-  .nav-links {
-    list-style-type: none;
-    display: flex;
-    align-items: center;
-  }
-  
-  .nav-links li {
-    margin-left: 20px;
-  }
-  
-  .nav-links a {
-    text-decoration: none;
-    color: #333;
-    font-weight: bold;
-  }
-  
-  .create-account-btn {
-    background-color: #FFC212;
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 20px;
-    cursor: pointer;
-  }
-  
-  .login-page {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    min-height: 100vh;
-    background-color: #f5f5f5;
-  }
-  
-  .login-container {
-    display: flex;
-    background-color: white;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
-    overflow: hidden;
-    width: 80%;
-    max-width: 1100px;
-  }
-  
-  .welcome-section {
-    flex: 1;
-    padding: 50px;
-    color: white;
-  }
-  
-  .welcome-img {
-    width: 100%;
-    margin-top: 20px;
-  }
-  
-  .form-section {
-    flex: 1;
-    padding: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .form-section h2 {
-    margin-bottom: 20px;
-    color: #333;
-  }
-  
-  .login-form input {
-    width: 100%;
-    padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-  }
-  
-  .forgot-password {
-    margin-top: 10px;
-    font-size: 0.9rem;
-    color: #1f192f;
-    text-decoration: none;
-  }
-  
-  .login-btn {
-    width: 100%;
-    padding: 15px;
-    background-color: #FFC212;
-    border: none;
-    border-radius: 5px;
-    color: white;
-    cursor: pointer;
-    font-size: 1rem;
-    margin-top: 20px;
-  }
-  
-  .social-login-text {
-    margin-top: 20px;
-    color: #333;
-  }
-  
-  .social-login-buttons {
-    display: flex;
-    justify-content: space-around;
-    width: 100%;
-    margin-top: 20px;
-  }
-  
-  .social-btn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
-  }
-  
-  .google {
-    background-color: #EA4335;
-    color: white;
-  }
-  
-  .facebook {
-    background-color: #3B5998;
-    color: white;
-  }
-  
-  .apple {
-    background-color: #333;
-    color: white;
-  }
-  
+}
+
+/* Efecto de resplandor al hacer hover */
+.login-btn:hover {
+  box-shadow: 0 0 15px rgba(255, 194, 18, 0.7), 0 0 25px rgba(255, 194, 18, 0.5);
+  transform: scale(1.05); /* Agrandar ligeramente el botón */
+}
+.register-button {
+  width: 32%;
+  padding: 10px;
+  background-color: #FFC212;
+  border: none;
+  border-radius: 25px;
+  color: white;
+  cursor: pointer;
+  font-size: 0.8rem;
+  font-weight: 700;
+  margin: 20px auto 0 auto; 
+  display: block; 
+  transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out; /* Efecto de transición */
+
+}
+
+.register-button:hover {
+  box-shadow: 0 0 15px rgba(255, 194, 18, 0.7), 0 0 25px rgba(255, 194, 18, 0.5);
+  transform: scale(1.05); /* Agrandar ligeramente el botón */
+}
+
+.social-login-text {
+  margin-top: 30px;
+  color: #333;
+  font-size: 15px;
+  margin-left: 13rem;
+}
+
+.social-login-buttons {
+  display: flex;
+  justify-content: space-around;
+  width: 80%;
+  max-width: 80px;
+  margin-top: 20px;
+  margin-left: 1.5rem;
+  gap: 10px;
+
+}
+
+.social-btn {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 0.8rem;
+  text-align: center;
+  transition: transform 0.2s ease;
+}
+
+.social-btn:hover {
+  transform: scale(1.1); /* Efecto de agrandamiento al pasar el mouse */
+}
+
+
+.google {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+}
+
+.facebook {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+}
+
+.apple {
+  background-color: #ffffff;
+  color: rgb(0, 0, 0);
+}
