--- a/Idiomatic/src/styles/MainHome.css
+++ b/Idiomatic/src/styles/MainHome.css
@@ -22,7 +22,6 @@
         display:flex !important;
         flex-direction: column;
         position: absolute ;
-        
         width: 20%;
         left: 0;
         align-items: center;
@@ -156,6 +155,7 @@
         color: white !important;
         background: rgba(58, 49, 96, 1) !important;
         height:25px;
+        border-radius: 20px;
     }
 
     .btnCrearCuenta{
