--- a/Idiomatic/src/styles/AjustesUser.css
+++ b/Idiomatic/src/styles/AjustesUser.css
@@ -10,6 +10,7 @@
 @media screen and (min-width:1024px){
 
     .ContainerHead{
+        margin-top: 5%;
         background:rgba(255, 199, 39, 1) !important;
         width:100%;
         border-Radius:50px;
@@ -39,6 +40,8 @@
     }
 
     .Containerbody{
+
+        margin-top: 5%;
         
         display: flex !important;
         padding-left: 0 !important;
