--- a/Idiomatic/src/styles/Libro.css
+++ b/Idiomatic/src/styles/Libro.css
@@ -18,7 +18,7 @@
 	display: none;
 }
 .imgLibro{
-	width: 100%;
+	width: 99%;
 	height: 100%;
 }
 .book{
@@ -28,8 +28,8 @@
 
 }
 #cover{
-	width: 100%;
-	height: 400px;
+	width: 95%;
+	height: 100%;   /*  400px */
 }
 
 .flip-book{
@@ -92,7 +92,7 @@
 	bottom: 13px;
 	right: 13px;
 	cursor: pointer;
-	color: #fff;
+	color: black;
 }
 #p1{
 	z-index: 3;
