Se termino el apartado de audios y algunos juegos

--- a/Idiomatic/src/styles/NotificacionesHome.css
+++ b/Idiomatic/src/styles/NotificacionesHome.css
@@ -19,6 +19,7 @@
         background:rgba(119, 102, 198, 0.3);
         width:100%;
         border-Radius:50px;
+        margin-bottom: 6%;
     }
 
     .TituloNoti{
