--- a/Idiomatic/src/styles/AjustesUser.css
+++ b/Idiomatic/src/styles/AjustesUser.css
@@ -1,5 +1,61 @@
 @media screen and (max-width: 600px) {
+
+    .ContainerMainAjustes{
+        padding-left: 0 !important;
+    }
     
+    .ContainerHead{
+        margin-top: 5%;
+        background:rgba(255, 199, 39, 1) !important;
+        width:100%;
+        height: 20vh;
+        border-Radius:50px;
+    }
+
+    .TitleHead{
+        color:black;
+        left:20%;
+        font-Size:5vh;
+    }
+
+    .subTitleHead{
+        color:black;
+        text-Align:center;
+        font-Size:6vw;
+    }
+
+    .imgHead{
+        position:absolute;
+        right:20px;
+        width: 35%;
+        top:14%;
+        /* min-Height:25%; */
+    }
+
+    .ApartadosAjustes{
+        width: 60% !important;
+        padding-left: 0 !important;
+    }
+
+    .Containerbody{
+
+        margin-top: 5%;
+        
+        display: flex !important;
+        padding: 0 !important;
+        
+    }
+    .ApartadoBody{
+        background-color: rgba(31, 25, 47, 0.1);
+        border-radius: 30px;
+        padding-left: 20px;
+    }
+
+    .btnAjustes{
+        display: block;
+        width: 100%;
+        border-radius: 30px;
+    }
 }
 
 @media  screen and (min-width:601px) and (max-Width:1023px) {
